--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simon</title>
-  <link rel="stylesheet" href="styles.css">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet"> -->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -117,7 +116,7 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="game.js" charset="utf-8"></script>
+  <script src="js/game.js" charset="utf-8"></script>
   <script src="js/highscore.js"></script>
   <script src="js/utilities.js"></script>
 </body>
