refactors game logic

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
   </div>
 
-  <div class="high-score-entry modal modal-overlay hide-modal">
+  <div class="high-score-entry modal modal-overlay">
     <div class="modal-container">
       <h2>New High Score</h2>
       <p>Please enter your name</p>
@@ -119,6 +119,7 @@
   <script src="js/game.js" charset="utf-8"></script>
   <script src="js/highscore.js"></script>
   <script src="js/utilities.js"></script>
+  <script src="js/sounds.js"></script>
 </body>
 
 </html>
