Make instruction screen responsive

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   </div>
 
   <div class="instructions modal modal-overlay">
-    <div class="modal-container modal-fullscreen">
+    <div class="instructions-container modal-container modal-fullscreen">
       <div class="container-grid">
         <button class="btn-close" onclick="closeInstructions()">&#10006;</button>
-        <div class="title">How to Play</div>
+        <h1 class="title">How to Play</h1>
         <div class="carousel">
           <div class="carousel__slides">
             <div class="carousel__slide current-slide">
